--- a/src/plugins/globe/globe_plugin_dialog_guibase.ui
+++ b/src/plugins/globe/globe_plugin_dialog_guibase.ui
@@ -43,7 +43,7 @@
    <item row="1" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -53,7 +53,7 @@
        <item row="0" column="0">
         <widget class="QGroupBox" name="mBaseLayerGroupBox">
          <property name="title">
-          <string>Base Layer</string>
+          <string>Base &amp;Layer</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -500,78 +500,6 @@
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>&lt;i&gt;Changing video settings requires a restart of the globe plugin&lt;/i&gt;</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="model">
-      <attribute name="title">
-       <string>Model</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_11">
-         <property name="text">
-          <string>Point Layer</string>
-         </property>
-         <property name="buddy">
-          <cstring>modelLayerCombo</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_14">
-         <property name="text">
-          <string>3D Model</string>
-         </property>
-         <property name="buddy">
-          <cstring>modelPathLineEdit</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLineEdit" name="modelPathLineEdit">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="4">
-        <widget class="QPushButton" name="modelBrowse">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>27</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QComboBox" name="modelLayerCombo">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
          </property>
         </widget>
        </item>
