[Globe] Filename refactoring, rework settings dialog

--- a/src/plugins/globe/qgsglobeplugindialog.ui
+++ b/src/plugins/globe/qgsglobeplugindialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1407</width>
-    <height>534</height>
+    <width>541</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,14 +36,14 @@
    <item row="2" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>4</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -88,7 +88,7 @@
        <item row="1" column="0">
         <widget class="QGroupBox" name="mSkyGroupBox">
          <property name="title">
-          <string>Sky</string>
+          <string>Sk&amp;y</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -105,6 +105,9 @@
            <widget class="QDateTimeEdit" name="mSkyDateTime">
             <property name="displayFormat">
              <string>dd.MM.yyyy HH:mm</string>
+            </property>
+            <property name="calendarPopup">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -424,7 +427,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_10">
          <property name="text">
-          <string>Type</string>
+          <string>T&amp;ype</string>
          </property>
          <property name="buddy">
           <cstring>elevationCombo</cstring>
@@ -636,33 +639,7 @@
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="QComboBox" name="comboStereoMode">
-         <item>
-          <property name="text">
-           <string notr="true">OFF</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">ANAGLYPHIC</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">QUAD_BUFFER</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">HORIZONTAL_SPLIT</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">VERTICAL_SPLIT</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="comboStereoMode"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="eyeSeparationLabel">
@@ -742,38 +719,5 @@
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>accepted()</signal>
-   <receiver>QgsGlobePluginDialogGuiBase</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>446</x>
-     <y>529</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>481</x>
-     <y>297</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonBox</sender>
-   <signal>rejected()</signal>
-   <receiver>QgsGlobePluginDialogGuiBase</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>387</x>
-     <y>529</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>281</x>
-     <y>339</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
