--- a/src/plugins/globe/qgsglobevectorlayerpropertiespage.ui
+++ b/src/plugins/globe/qgsglobevectorlayerpropertiespage.ui
@@ -7,203 +7,241 @@
     <x>0</x>
     <y>0</y>
     <width>446</width>
-    <height>501</height>
+    <height>580</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="mGbxAltitude">
-     <property name="title">
-      <string>Altitude</string>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0" colspan="2">
+    <widget class="QStackedWidget" name="stackedWidgetRenderingMode">
+     <property name="currentIndex">
+      <number>1</number>
      </property>
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="mLblClamping">
-        <property name="toolTip">
-         <string>Terrain following behaviur</string>
-        </property>
-        <property name="text">
-         <string>Clamping</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="mCbxAltitudeClamping">
-        <property name="toolTip">
-         <string>Terrain following behavior</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="mLblTechnique">
-        <property name="toolTip">
-         <string>Terrain following technique</string>
-        </property>
-        <property name="text">
-         <string>Technique</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="mLblBinding">
-        <property name="toolTip">
-         <string>Granulatiry at which to sample the terrain</string>
-        </property>
-        <property name="text">
-         <string>Binding</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="mLblResolution">
-        <property name="toolTip">
-         <string>Elevation data resolution at which to sample terrain height</string>
-        </property>
-        <property name="text">
-         <string>Resolution</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="mLblOffset">
-        <property name="toolTip">
-         <string>Vertical offset to apply to geometry Z</string>
-        </property>
-        <property name="text">
-         <string>Offset</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="mLblScale">
-        <property name="toolTip">
-         <string>Scale factor to apply to geometry Z</string>
-        </property>
-        <property name="text">
-         <string>Scale</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="mCbxAltitudeTechnique">
-        <property name="toolTip">
-         <string>Terrain following technique</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QComboBox" name="mCbxAltitudeBinding">
-        <property name="toolTip">
-         <string>Granulatiry at which to sample the terrain</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QDoubleSpinBox" name="mTxtAltitudeResolution">
-        <property name="toolTip">
-         <string>Elevation data resolution at which to sample terrain height</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QDoubleSpinBox" name="mTxtAltitudeOffset">
-        <property name="toolTip">
-         <string>Vertical offset to apply to geometry Z</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QDoubleSpinBox" name="mTxtAltitudeScale">
-        <property name="toolTip">
-         <string>Scale factor to apply to geometry Z</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QWidget" name="pageRasterized">
+      <layout class="QVBoxLayout" name="verticalLayout"/>
+     </widget>
+     <widget class="QWidget" name="pageModel">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QGroupBox" name="groupBoxAltitude">
+         <property name="title">
+          <string>Altitude</string>
+         </property>
+         <layout class="QFormLayout" name="formLayout">
+          <item row="0" column="0">
+           <widget class="QLabel" name="labelAltitudeClamping">
+            <property name="toolTip">
+             <string>Terrain following behaviur</string>
+            </property>
+            <property name="text">
+             <string>Clamping</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="comboBoxAltitudeClamping">
+            <property name="toolTip">
+             <string>Terrain following behavior</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="labelAltitudeTechnique">
+            <property name="toolTip">
+             <string>Terrain following technique</string>
+            </property>
+            <property name="text">
+             <string>Technique</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="labelAltitudeBinding">
+            <property name="toolTip">
+             <string>Granulatiry at which to sample the terrain</string>
+            </property>
+            <property name="text">
+             <string>Binding</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="labelAltitudeResolution">
+            <property name="toolTip">
+             <string>Elevation data resolution at which to sample terrain height</string>
+            </property>
+            <property name="text">
+             <string>Resolution</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="labelAltitudeOffset">
+            <property name="toolTip">
+             <string>Vertical offset to apply to geometry Z</string>
+            </property>
+            <property name="text">
+             <string>Offset</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="labelAltitudeScale">
+            <property name="toolTip">
+             <string>Scale factor to apply to geometry Z</string>
+            </property>
+            <property name="text">
+             <string>Scale</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QComboBox" name="comboBoxAltitudeTechnique">
+            <property name="toolTip">
+             <string>Terrain following technique</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QComboBox" name="comboBoxAltitudeBinding">
+            <property name="toolTip">
+             <string>Granulatiry at which to sample the terrain</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QDoubleSpinBox" name="spinBoxAltitudeResolution">
+            <property name="toolTip">
+             <string>Elevation data resolution at which to sample terrain height</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QDoubleSpinBox" name="spinBoxAltitudeOffset">
+            <property name="toolTip">
+             <string>Vertical offset to apply to geometry Z</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QDoubleSpinBox" name="spinBoxAltitudeScale">
+            <property name="toolTip">
+             <string>Scale factor to apply to geometry Z</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBoxExtrusion">
+         <property name="title">
+          <string>E&amp;xtrusion</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <layout class="QFormLayout" name="formLayout_2">
+          <property name="fieldGrowthPolicy">
+           <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="labelExtrusionHeight_2">
+            <property name="text">
+             <string>Height [m]</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="labelExtrusionHeight">
+            <property name="toolTip">
+             <string>Extrusion height, either a numeric value, or a field expression</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="labelExtrusionWallGradient">
+            <property name="text">
+             <string>Wall gradient</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QDoubleSpinBox" name="spinBoxExtrusionWallGradient">
+            <property name="toolTip">
+             <string>Wall coloring gradient</string>
+            </property>
+            <property name="maximum">
+             <double>1.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>0.500000000000000</double>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="QCheckBox" name="checkBoxExtrusionFlatten">
+            <property name="toolTip">
+             <string>Whether the top cap of the extruded geometry should be flat</string>
+            </property>
+            <property name="text">
+             <string>Flatten</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBoxLabelingEnabled">
+         <property name="title">
+          <string>Enable &amp;labeling</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <layout class="QFormLayout" name="formLayout_4">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="checkBoxLabelingDeclutter">
+            <property name="text">
+             <string>Declutter</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxLighting">
+         <property name="text">
+          <string>Lighting</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
-   <item>
-    <widget class="QGroupBox" name="mGbxExtrusion">
-     <property name="title">
-      <string>E&amp;xtrusion</string>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-      </property>
-      <item row="0" column="0">
-       <widget class="QLabel" name="mLblHeight">
-        <property name="text">
-         <string>Height [m]</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="mTxtHeight"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="mLblWallGradient">
-        <property name="text">
-         <string>Wall gradient</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QDoubleSpinBox" name="mTxtWallGradient">
-        <property name="maximum">
-         <double>1.000000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.100000000000000</double>
-        </property>
-        <property name="value">
-         <double>0.500000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QCheckBox" name="mChkExtrusionFlatten">
-        <property name="text">
-         <string>Flatten</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="mGbxLabelingEnabled">
-     <property name="title">
-      <string>Enable &amp;labeling</string>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <layout class="QFormLayout" name="formLayout_4">
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="mCbxLabelingDeclutter">
-        <property name="text">
-         <string>Declutter</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="mChkLighting">
+   <item row="0" column="0">
+    <widget class="QLabel" name="labelRenderingMode">
      <property name="text">
-      <string>Lighting</string>
+      <string>Rendering mode:</string>
      </property>
     </widget>
    </item>
-   <item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="comboBoxRenderingMode">
+     <property name="toolTip">
+      <string>Rendering method for the layer</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
