--- a/src/plugins/globe/qgsglobeplugindialog.ui
+++ b/src/plugins/globe/qgsglobeplugindialog.ui
@@ -43,7 +43,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="tabMap">
       <attribute name="title">
@@ -726,6 +726,13 @@
        <string>Advanced</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QCheckBox" name="checkBoxFeatureIdentification">
+         <property name="text">
+          <string>Enable feature identification</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="QCheckBox" name="checkBoxFrustumHighlighting">
          <property name="text">
